# ai_mcp_engineering

./: .env.example  .gitignore  pyproject.toml
autogen/autogen_core/: main.py
autogen/autogen_distributed/: autogen_distributed.py
autogen/database_chat/: database_chat.py  tickets.db
autogen/tools_chat/: tools_chat.py
crewai/coder/: pyproject.toml
crewai/debate/: pyproject.toml
crewai/debate/output/: decide.md  oppose.md  propose.md
crewai/debate/src/debate/: crew.py  main.py
crewai/debate/src/debate/config/: agents.yaml  tasks.yaml
crewai/debate/tests/: test_debate.py
crewai/engineering_team/: pyproject.toml
crewai/engineering_team/output/: app.py  test_tictactoe.py  tictactoe.py  tictactoe.py_design.md
crewai/engineering_team/src/engineering_team/: crew.py  main.py
crewai/engineering_team/tests/: conftest.py  test_crew.py
crewai/financial_researcher/: pyproject.toml
crewai/stock_picker/: pyproject.toml
foundation/: cybersecurity.py  intelligent_orchestrator.py  linkedin.py  prompt_chaining_parallelization.py  pushover.py  question.py
foundation/me/: embed_cache.json  professional_context.txt  qa_knowledge.db  summary.txt
langgraph/: chatbot.py  langgraph_agent.py  sidekick.py
langgraph/sidekick/: app.py  sidekick.py  sidekick_tools.py
mcp/: banoffee-pie-snapshot.md  first_mcp.py  poker_mcp.py
mcp/.playwright-mcp/: page-2026-06-23T07-59-25-421Z.yml  page-2026-06-23T07-59-30-856Z.yml  page-2026-06-23T07-59-34-860Z.yml  page-2026-06-23T07-59-37-853Z.yml  (+2 more)
openai/: deep_research.py  guardrails.py
page_bot_ai/: __init__.py  __main__.py  agent.py  config.py  crawler.py  flow.py  llm.py
stealth_agent/: requirements.txt
(+277 files in other folders)
