[project]
name = "engineering_team"
version = "0.1.0"
description = "engineering_team using crewAI"
authors = [{ name = "Oleg Onilo", email = "o.onilo@enjoygaming.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,anthropic]==1.14.3",
    "gradio>=6.14.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
engineering_team = "engineering_team.main:run"
run_crew = "engineering_team.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# onnxruntime 1.26.0 has no wheel for macOS 26 (Tahoe) arm64 — pin to last compatible version
override-dependencies = [
    "onnxruntime>=1.16.3,<1.26.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
